<resources>
    <string name="app_name">Group15_Final</string>

    //Button
    <string name="btn_add">Add Image</string>
    <string name="btn_exit">Exit</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_logout">Logout</string>

    //Text
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="text_user">User name</string>
    <string name="text_pass">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="full_name">Full Name</string>
    <string name="scoreboard">SCORE BOARD</string>

</resources>