<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/yellow"
    android:orientation="vertical"
    android:id="@+id/container"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="40dp"
        android:text="@string/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:hint="@string/full_name"
        android:id="@+id/signUpFullName"
        android:layout_marginTop="15dp"
        android:background="@drawable/border_log"
        android:padding="12dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:hint="@string/text_user"
        android:id="@+id/signUpUser"
        android:layout_marginTop="15dp"
        android:background="@drawable/border_log"
        android:padding="12dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:hint="@string/text_pass"
        android:id="@+id/signUpPassword"
        android:layout_marginTop="15dp"
        android:background="@drawable/border_log"
        android:drawableRight="@drawable/baseline_visibility_off_24"
        android:inputType="textPassword"
        android:longClickable="false"
        android:padding="12dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:hint="@string/confirm_pass"
        android:id="@+id/signUpConfirm"
        android:layout_marginTop="15dp"
        android:background="@drawable/border_log"
        android:drawableRight="@drawable/baseline_visibility_off_24"
        android:inputType="textPassword"
        android:longClickable="false"
        android:padding="12dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:layout_marginRight="20dp"
            android:text="@string/sign_up"
            android:textSize="16dp"
            android:id="@+id/btn_signUp"
            android:layout_width="130dp"
            android:layout_height="wrap_content"/>
        <Button
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:layout_marginLeft="20dp"
            android:text="@string/btn_cancel"
            android:textSize="16dp"
            android:id="@+id/btn_cancel"
            android:layout_width="130dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>