<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:orientation="vertical"
    android:id="@+id/container"
    android:gravity="center"
    tools:context=".LoginActivity">

    <TextView
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="40dp"
        android:text="@string/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="20dp"
        android:hint="@string/text_user"
        android:id="@+id/loginUser"
        android:background="@drawable/border_log"
        android:padding="12dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="20dp"
        android:hint="@string/text_pass"
        android:id="@+id/loginPass"
        android:background="@drawable/border_log"
        android:drawableRight="@drawable/baseline_visibility_off_24"
        android:inputType="textPassword"
        android:longClickable="false"
        android:padding="12dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_login"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:layout_marginRight="20dp"
            android:text="@string/sign_in"
            android:textSize="16dp"
            android:layout_width="130dp"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_register"
            android:textColor="@color/white"
            android:background="@drawable/custom_button"
            android:layout_marginLeft="20dp"
            android:text="@string/sign_up"
            android:textSize="16dp"
            android:layout_width="130dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <Button
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"
        android:text="@string/btn_exit"
        android:textSize="16dp"
        android:id="@+id/btn_exit"
        android:layout_width="130dp"
        android:layout_height="wrap_content"/>

</LinearLayout>